# experimentals

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  readme.md
cmake/: cmake_config.hpp.cmake
configure/: README.md  README.md.cmake  configure.hpp  doxyfile.cmake  doxyfile.in  readme.md.cmake  version.hpp.cmake
docs/: accessor_8hpp_source.html  accessor__traits_8hpp_source.html  annotated.html  annotated_dup.js  ascii__keyboard_8hpp_source.html  basic__vstream_8hpp_source.html  char__split__include__delimiter_8hpp_source.html  classes.html  classmeevax_1_1debug_1_1dummy__type-members.html  classmeevax_1_1debug_1_1dummy__type.html  classmeevax_1_1iostream_1_1read-members.html  classmeevax_1_1iostream_1_1read.html  classmeevax_1_1iostream_1_1read.js  classmeevax_1_1iostream_1_1read_1_1read__.html  classmeevax_1_1iostream_1_1read_1_1read___3_01HierarchicalSemantics_01_4-members.html  classmeevax_1_1iostream_1_1read_1_1read___3_01HierarchicalSemantics_01_4.html  classmeevax_1_1iostream_1_1read_1_1read___3_01HierarchicalSemantics_01_4.js  classmeevax_1_1iostream_1_1read_1_1read___3_01HierarchicalSemantics_0A_0Ahierarchical__semantics_1_1getchar_01_4-members.html  classmeevax_1_1iostream_1_1read_1_1read___3_01HierarchicalSemantics_0A_0Ahierarchical__semantics_1_1getchar_01_4.html  classmeevax_1_1iostream_1_1read_1_1read___3_01HierarchicalSemantics_0A_0Ahierarchical__semantics_1_1getchar_01_4.js  classmeevax_1_1iostream_1_1read_1_1read___3_01hierarchical__semantics_1_1getchar_01_4-members.html  classmeevax_1_1iostream_1_1read_1_1read___3_01hierarchical__semantics_1_1getchar_01_4.html  classmeevax_1_1iostream_1_1read_1_1read___3_01hierarchical__semantics_1_1getchar_01_4.js  classmeevax_1_1iostream_1_1read_1_1read___3_01hierarchical__semantics_1_1sequence_01_4-members.html  classmeevax_1_1iostream_1_1read_1_1read___3_01hierarchical__semantics_1_1sequence_01_4.html  classmeevax_1_1iostream_1_1read_1_1read___3_01hierarchical__semantics_1_1sequence_01_4.js  classmeevax_1_1iostream_1_1read__coll__graph.map  classmeevax_1_1iostream_1_1read__coll__graph.md5  classmeevax_1_1posix_1_1fd-members.html  classmeevax_1_1posix_1_1fd.html  classmeevax_1_1posix_1_1fd.js  classmeevax_1_1posix_1_1fd__coll__graph.map  classmeevax_1_1posix_1_1fd__inherit__graph.map  classmeevax_1_1posix_1_1fd__inherit__graph.md5  classmeevax_1_1posix_1_1fd_a3318d5f7fc690df80739969d75e1b97c_cgraph.map  classmeevax_1_1posix_1_1fd_a3318d5f7fc690df80739969d75e1b97c_cgraph.md5  classmeevax_1_1posix_1_1fd_a338fc8b4b3d185edfa2816624abf5986_cgraph.map  classmeevax_1_1posix_1_1fd_a338fc8b4b3d185edfa2816624abf5986_cgraph.md5  classmeevax_1_1posix_1_1fd_a338fc8b4b3d185edfa2816624abf5986_icgraph.map  classmeevax_1_1posix_1_1fd_a338fc8b4b3d185edfa2816624abf5986_icgraph.md5  (+854 more)
docs/search/: all_0.js
doxygen/: customdoxygen.css  doxy-boot.js  doxyfile  footer.html  header.html  style.css
include/meevax/: cmake_config.hpp  metainfo.hpp  version.hpp
include/meevax/algorithm/: char_split_include_delimiter.hpp  nearer.hpp  regex_split_include_delimiter.hpp  split_include_delimiter.hpp
include/meevax/ansi_escape_sequence/: cursor.hpp  graphics_mode.hpp
include/meevax/cairo/: context.hpp  surface.hpp
include/meevax/concepts/: is_standard_container.hpp
include/meevax/configure/: version.hpp
include/meevax/core/: generic_editor.hpp
include/meevax/debug/: debug.hpp  dummy_type.hpp
include/meevax/graph/: dynamic_tree.hpp  labeled_tree.hpp
include/meevax/iostream/: iostream.hpp  read.hpp
include/meevax/joke/: delayed_write.hpp
include/meevax/lambda/: overload.hpp
include/meevax/master-slave/: ansi_escape_sequences.cpp
include/meevax/numeric/: iota.hpp
include/meevax/operation/: reader.hpp
include/meevax/posix/: fd.hpp  file_descriptor.hpp  inline_curses.hpp  posix.hpp  read.hpp  termios.hpp
include/meevax/preproc/: key_bind.cpp  version.hpp
include/meevax/regex/: extract.hpp  predefined.hpp  regex.hpp
include/meevax/semantic/: read.hpp
include/meevax/semantics/: objective.hpp  operation.hpp  r.hpp  semiosis.hpp  w.hpp
include/meevax/string/: delayed_write.hpp  magic_formula.hpp  replace_unprintable.hpp  runtime_typename.hpp  static_concat.hpp  static_concatenate.hpp  string.hpp
include/meevax/syntax/: lexer.hpp  main.hpp  syntax.hpp
include/meevax/trial/: ansi_escape_seqence.hpp  ansi_escape_sequence.hpp  arguments_parser.hpp  constexpr_string.hpp  generic_parser.hpp  runtime_typeinfo.hpp  static_concatenate.hpp
include/meevax/type_traits/: has_function.hpp  has_function_call_operator.hpp  has_operator.hpp  has_type.hpp  has_value_type.hpp  introspection.hpp  is_char_type.hpp  is_equality_comparable.hpp  is_explicit_invocable.hpp  is_implicit_invocable.hpp  is_scoped_bitmasks.hpp  is_standard_container.hpp  is_stl_compatible_container.hpp  is_supports_bitwise_operators.hpp  is_supports_decrement_operators.hpp  is_supports_increment_operators.hpp  type_traits.hpp
include/meevax/unix/: basename.hpp  execvp.hpp  fork.hpp  shell.hpp  termios.hpp
include/meevax/utility/: curry.hpp  evaluate.hpp  explicit_function.hpp  noncopyable.hpp  overload.hpp  overload_objectives.hpp  overload_operations.hpp  overloaded_objectives.hpp  overloaded_operations.hpp  (+4 more)
src/: main.cpp  main.cpp.bak  main.cpp.bak2
(+54 files in other folders)
